--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,3 @@
-title: "全球 eSIM 流量套餐中文导航"
+title: "azpetavircava DATA IO Hub"
 lang: zh-CN
 theme: jekyll-theme-cayman
-plugins:
-  - jekyll-seo-tag
